fixing inspiration img sizing on mobile

--- a/styles.css
+++ b/styles.css
@@ -127,6 +127,7 @@ main {
 .inspirational img {
     width: 100%;
     height: 100%;
+    min-height: 25rem;
     object-fit: cover;
 }
 
